@@ -1,6 +1,11 @@
 
 === ppracer 0.5 beta ===
 
+2006-04-19  Volker Stroebel <volker@planetpenguin.de>
+	* src/ppogl/base/defs.h src/*
+	added ppogl::Axis enum
+	changed code to use ppogl::Axis instead of chars
+
 2006-04-11  Volker Stroebel <volker@planetpenguin.de>
 	* src/ppogl/Textures.* src/data/*
 	added Texture modes
